test/fail/basic_syntax/elif_without_if.lily
#[
SyntaxError: 'elif' without 'if'.
    from elif_without_if.lily:6:
]#

elif
